# davislib

./: .gitignore  README.md  changelog.md  environment.yaml  log.txt  pyproject.toml
davislib/: __init__.py  attribute.py  component.py  core.py  davis.py  dimensions.py  image_set.py  log.txt  scale.py  try_backend.py  xarray_backend.py
temp/: davistools.py  try_lvpyio.py
tests/: test_attribute.py  test_dimensions.py  test_version.py  test_xarray_backend.py
tests/data/: TimestampWithoutMillisecondsData.set
tests/data/TimestampWithoutMillisecondsData/: B00001.im7  B00002.im7  B00003.im7  B00004.im7  B00005.im7  B00006.im7  B00007.im7  B00008.im7  B00009.im7  B00010.im7  JobHistory.xml
tests/image_set_accessor/: test_simple_image_set.py  test_timestamp_without_milliseconds.py
