[tool.poetry]
name = "davislib"
version = "0.1.0"
description = "A python wrapper library to access Davis image sets from python."
authors = ["thaeber <thomas.haeber@kit.edu>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
