[tool.poetry]
name = "mfclib"
version = "0.1.0"
description = "A small Python wrapper module for loading davis image sets as xarrays"
authors = ["Thomas Haeber <thomas.haeber@kit.edu>"]
readme = "README.md"
packages = [{ include = "davislib", from = "." }]


[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.25"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pylint = "^2.17"
jupyter = "^1.0"
black = "^23.7"
pytest-watcher = "^0.4"
git-changelog = "^2.5"
pre-commit = "^3.7"
bump-my-version = "^0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '''^version\s*=\s*([\'\"\`])({current_version})\1'''
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "mfclib/version.py"

[[tool.bumpversion.files]]
filename = "test/test_version.py"

[tool.git-changelog]
convention = "angular"
in-place = false
output = "changelog.md"
provider = "github"
sections = "fix,feat,refactor,chore,style,build,test"
template = "angular"
